--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,16 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/screenBg"
     tools:context=".LoginActivity">
+
+
+    <include android:id="@+id/header" layout="@layout/header"></include>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:layout_margin="50dp"
-        android:textSize="30dp"/>
+        android:text="@string/title_login"
+        android:padding="@dimen/inputParentMargin"
+        android:layout_below="@+id/header"
+        android:gravity="center"
+        android:textSize="@dimen/title_login_text_size"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:padding="@dimen/inputParentMargin">
+
+        <EditText
+            android:id="@+id/edTcNo"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/inputHeight"
+            android:textColor="@color/black"
+            android:hint="@string/hint_tc_no"
+            android:inputType="number"
+            android:maxLength="11"
+            android:padding="@dimen/inputInnerPadding"
+            android:layout_marginBottom="@dimen/componentBetweenMargin"
+            android:background="@mipmap/textarea"/>
+
+        <EditText
+            android:id="@+id/edTelefon"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/inputHeight"
+            android:textColor="@color/black"
+            android:hint="@string/hint_telefon"
+            android:padding="@dimen/inputInnerPadding"
+            android:maxLength="11"
+            android:inputType="numberPassword"
+            android:layout_marginBottom="@dimen/componentBetweenMargin"
+            android:background="@mipmap/textarea" />
+
+        <ImageButton
+            android:layout_width="@dimen/loginBtnWidth"
+            android:layout_height="@dimen/loginBtnHeight"
+            android:background="@drawable/login_selector"
+            android:layout_gravity="center"
+            android:onClick="login"/>
+    </LinearLayout>
+
+
+
+
+
+</RelativeLayout>
