--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="dialogBg">#40000000</color>
+    <color name="headerColor">#00000000</color>
+    <color name="screenBg">#fff</color>
+    <color name="black">#000</color>
+    <color name="white">#fff</color>
 </resources>
