--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="inputHeight">60dp</dimen>
+    <dimen name="inputHeight">50dp</dimen>
     <dimen name="inputParentMargin">40dp</dimen>
     <dimen name="componentBetweenMargin">20dp</dimen>
     <dimen name="inputInnerPadding">10dp</dimen>
-    <dimen name="loginBtnWidth">151dp</dimen>
-    <dimen name="loginBtnHeight">69dp</dimen>
+    <dimen name="loginBtnWidth">170dp</dimen>
+    <dimen name="loginBtnHeight">50dp</dimen>
     <dimen name="splash_height">75dp</dimen>
     <dimen name="splash_width">240dp</dimen>
     <dimen name="title_login_text_size">22sp</dimen>
+    <dimen name="logo_width">200dp</dimen>
+    <dimen name="logo_height">180dp</dimen>
 </resources>
