--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="dialogBg">#40000000</color>
     <color name="headerColor">#00000000</color>
-    <color name="screenBg">#fff</color>
+    <color name="screenBg">#e7e6e6</color>
     <color name="black">#000</color>
     <color name="white">#fff</color>
 </resources>
