Sinav sayfasi (webview) temeli oluşturuldu.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="title_login_text_size">22sp</dimen>
     <dimen name="logo_width">200dp</dimen>
     <dimen name="logo_height">180dp</dimen>
+    <dimen name="webview_height"></dimen>
 </resources>
