--- a/app/src/main/res/layout/activity_sinav.xml
+++ b/app/src/main/res/layout/activity_sinav.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SinavActivity">
 
-
-
-</android.support.constraint.ConstraintLayout>
+<include android:id="@+id/header" layout="@layout/header"></include>
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/header">
+    </WebView>
+</RelativeLayout>
