--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,5 +11,15 @@
     <dimen name="title_login_text_size">22sp</dimen>
     <dimen name="logo_width">200dp</dimen>
     <dimen name="logo_height">180dp</dimen>
-    <dimen name="webview_height"></dimen>
+    <dimen name="webview_height">270dp</dimen>
+    <dimen name="katil_width">130dp</dimen>
+    <dimen name="katil_height">52dp</dimen>
+    <dimen name="bitir_width">230dp</dimen>
+    <dimen name="bitir_height">50dp</dimen>
+    <dimen name="choices_width">42dp</dimen>
+    <dimen name="choices_height">42dp</dimen>
+    <dimen name="button_left_right_width">60dp</dimen>
+    <dimen name="button_left_right_height">64dp</dimen>
+    <dimen name="git_width">154dp</dimen>
+    <dimen name="git_height">35dp</dimen>
 </resources>
