--- a/app/src/main/res/drawable-v24/c_selector.xml
+++ b/app/src/main/res/drawable-v24/c_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/c"
+    <item android:drawable="@drawable/c_selected"
           android:state_pressed="true" />
     <item android:drawable="@drawable/c"
           android:state_focused="true" />
