--- a/app/src/main/res/layout/cell_sinavlistesi.xml
+++ b/app/src/main/res/layout/cell_sinavlistesi.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
+        android:id="@+id/cv"
         android:layout_height="wrap_content"
-        android:background="@mipmap/listealani">
+        android:layout_marginBottom="10dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardElevation="0dp">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -22,6 +26,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/sinavAdi"
+                    android:textSize="16sp"
+                    android:fontFamily="monospace"
                     android:text="Sinav Adi"/>
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -30,11 +36,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Sinav Tarihi ve Saati"
+                        android:textSize="16sp"
+                        android:fontFamily="monospace"
                         android:id="@+id/sinavZamani"/>
                     <TextView
                         android:layout_alignParentRight="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:fontFamily="monospace"
                         android:text="Salon No"
                         android:id="@+id/salonNo"/>
                 </RelativeLayout>
@@ -45,10 +55,10 @@
             <ImageButton
                 android:layout_alignParentRight="true"
                 android:id="@+id/btnKatil"
-                android:layout_centerVertical="true"
                 android:layout_width="@dimen/katil_width"
                 android:layout_height="@dimen/katil_height"
-                android:background="@drawable/katil_selector" />
+                android:background="@drawable/katil_selector"
+                android:layout_centerVertical="true"    />
 
         </RelativeLayout>
 
