--- a/app/src/main/res/drawable-v24/button_right_selector.xml
+++ b/app/src/main/res/drawable-v24/button_right_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/button_right"
+    <item android:drawable="@drawable/button_right_selected"
           android:state_pressed="true" />
     <item android:drawable="@drawable/button_right"
           android:state_focused="true" />
