--- a/app/src/main/res/drawable-v24/sign_out_selector.xml
+++ b/app/src/main/res/drawable-v24/sign_out_selector.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/b_selected"
+    <item android:drawable="@drawable/sign_out_selected"
           android:state_pressed="true" />
-    <item android:drawable="@drawable/b"
+    <item android:drawable="@drawable/sign_out"
           android:state_focused="true" />
-    <item android:drawable="@drawable/b" />
+    <item android:drawable="@drawable/sign_out" />
 </selector>
