--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,12 +14,17 @@
     <dimen name="katil_width">130dp</dimen>
     <dimen name="katil_height">52dp</dimen>
     <dimen name="bitir_width">115dp</dimen>
-    <dimen name="bitir_height">50dp</dimen>
-    <dimen name="choices_width">51dp</dimen>
-    <dimen name="choices_height">52dp</dimen>
-    <dimen name="button_left_right_width">60dp</dimen>
-    <dimen name="button_left_right_height">64dp</dimen>
-    <dimen name="git_width">126dp</dimen>
+    <dimen name="bitir_height">60dp</dimen>
+    <dimen name="choices_width">50dp</dimen>
+    <dimen name="choices_height">50dp</dimen>
+    <dimen name="button_left_right_width">50dp</dimen>
+    <dimen name="button_left_right_height">50dp</dimen>
+    <dimen name="git_width">111dp</dimen>
     <dimen name="git_height">36dp</dimen>
-    <dimen name="info_height">50dp</dimen>
+    <dimen name="info_height">60dp</dimen>
+    <dimen name="choice_margin_right">10dp</dimen>
+    <dimen name="sign_out_width">226dp</dimen>
+    <dimen name="sign_out_height">50dp</dimen>
+    <dimen name="time_width">30dp</dimen>
+    <dimen name="time_height">30dp</dimen>
 </resources>
