--- a/app/src/main/res/layout/cell_sinavlistesi.xml
+++ b/app/src/main/res/layout/cell_sinavlistesi.xml
@@ -9,8 +9,9 @@
         android:id="@+id/cv"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        app:cardBackgroundColor="@color/white"
-        app:cardElevation="0dp">
+        app:cardBackgroundColor="@color/white_transparent"
+        android:layout_marginHorizontal="3dp"
+        app:cardElevation="5dp">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -41,6 +42,7 @@
                         android:id="@+id/sinavZamani"/>
                     <TextView
                         android:layout_alignParentRight="true"
+                        android:layout_alignParentBottom="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
