--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,19 @@
         android:id="@+id/header"/>
 
 
-    <android.support.v7.widget.RecyclerView
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/headerTxt"
         android:layout_below="@+id/header"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:paddingBottom="10dp"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_below="@+id/headerTxt"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recyclerView">
