--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,6 +29,7 @@
             android:hint="@string/hint_tc_no"
             android:inputType="number"
             android:maxLength="11"
+            android:text="11111111116"
             android:padding="@dimen/inputInnerPadding"
             android:layout_marginBottom="@dimen/componentBetweenMargin"
             android:drawableLeft="@drawable/ic_person_black_24dp"
@@ -42,6 +43,7 @@
             android:hint="@string/hint_telefon"
             android:padding="@dimen/inputInnerPadding"
             android:maxLength="11"
+            android:text="5420001517"
             android:inputType="numberPassword"
             android:layout_marginBottom="@dimen/componentBetweenMargin"
             android:drawableLeft="@drawable/ic_phone_android_black_24dp"
